--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-autoprefixer": "^6.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-cache": "^1.0.2",
+    "gulp-clean-css": "^4.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.3",
     "gulp-html-import": "0.0.2",
@@ -31,5 +32,9 @@
     "gulp-util": "^3.0.8",
     "imagemin-pngquant": "^6.0.0",
     "node-sass": "^4.10.0"
+  },
+  "dependencies": {
+    "gulp-if": "^2.0.2",
+    "yargs": "^12.0.5"
   }
 }
