--- a/package.json
+++ b/package.json
@@ -1,40 +1,50 @@
 {
-  "name": "member",
-  "version": "1.0.0",
-  "description": "remember",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Drum",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.3.1",
-    "browser-sync": "^2.26.3",
-    "del": "^3.0.0",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^6.0.0",
-    "gulp-babel": "^8.0.0",
-    "gulp-cache": "^1.1.1",
-    "gulp-clean-css": "^4.0.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-cssnano": "^2.1.3",
-    "gulp-html-import": "0.0.2",
-    "gulp-htmlmin": "^5.0.1",
-    "gulp-imagemin": "^5.0.3",
-    "gulp-notify": "^3.2.0",
-    "gulp-plumber": "^1.2.1",
-    "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.2",
-    "gulp-sourcemaps": "^2.6.4",
-    "gulp-uglifyjs": "^0.6.2",
-    "imagemin-pngquant": "^6.0.1",
-    "node-sass": "^4.11.0"
-  },
-  "dependencies": {
-    "gulp-if": "^2.0.2",
-    "imagemin-webp": "^5.0.0",
-    "yargs": "^12.0.5"
-  }
+	"name": "member",
+	"version": "1.0.0",
+	"description": "remember",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"author": "Drum",
+	"license": "ISC",
+	"devDependencies": {
+		"@babel/core": "^7.4.5",
+		"@babel/plugin-transform-runtime": "^7.4.4",
+		"@babel/preset-env": "^7.4.5",
+		"browser-sync": "^2.26.7",
+		"del": "^3.0.0",
+		"gulp": "^3.9.1",
+		"gulp-autoprefixer": "^6.1.0",
+		"gulp-babel": "^8.0.0",
+		"gulp-cache": "^1.1.2",
+		"gulp-clean-css": "^4.2.0",
+		"gulp-concat": "^2.6.1",
+		"gulp-cssnano": "^2.1.3",
+		"gulp-html-import": "0.0.2",
+		"gulp-htmlmin": "^5.0.1",
+		"gulp-imagemin": "^5.0.3",
+		"gulp-notify": "^3.2.0",
+		"gulp-plumber": "^1.2.1",
+		"gulp-postcss": "^8.0.0",
+		"gulp-rename": "^1.4.0",
+		"gulp-rigger": "^0.5.8",
+		"gulp-sass": "^4.0.2",
+		"gulp-sourcemaps": "^2.6.5",
+		"gulp-uglify": "^3.0.2",
+		"gulp-uglifyjs": "^0.6.2",
+		"imagemin-pngquant": "^6.0.1",
+		"node-sass": "^4.12.0",
+		"postcss-reporter": "^6.0.1",
+		"stylelint": "^9.10.1"
+	},
+	"dependencies": {
+		"@babel/runtime": "^7.4.5",
+		"babel": "^6.23.0",
+		"gulp-if": "^2.0.2",
+		"imagemin-webp": "^5.1.0",
+		"install": "^0.12.2",
+		"npm": "^6.9.0",
+		"yargs": "^13.2.4"
+	}
 }
