--- a/package.json
+++ b/package.json
@@ -9,32 +9,37 @@
   "author": "Drum",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
     "browser-sync": "^2.26.7",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^6.1.0",
     "gulp-babel": "^8.0.0",
-    "gulp-cache": "^1.1.2",
+    "gulp-cache": "^1.1.3",
     "gulp-clean-css": "^4.2.0",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.3",
-    "gulp-html-import": "0.0.2",
     "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^5.0.3",
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.1",
+    "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
+    "gulp-rigger": "^0.5.8",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
+    "gulp-uglify": "^3.0.2",
     "gulp-uglifyjs": "^0.6.2",
-    "imagemin-pngquant": "^8.0.0",
-    "node-sass": "^4.12.0"
+    "imagemin-pngquant": "^6.0.1",
+    "node-sass": "^4.14.1",
+    "postcss-reporter": "^6.0.1",
+    "rigger": "^1.0.1",
+    "stylelint": "^13.5.0"
   },
   "dependencies": {
     "gulp-if": "^2.0.2",
     "imagemin-webp": "^5.1.0",
-    "yargs": "^12.0.5"
+    "install": "^0.12.2",
+    "npm": "^6.14.5",
+    "yargs": "^13.3.0"
   }
 }
