--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "member",
   "version": "1.0.0",
-  "description": "remember",
+  "description": "Template",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,36 +9,28 @@
   "author": "Drum",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.10.2",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/polyfill": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
     "browser-sync": "^2.26.7",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-babel": "^8.0.0",
-    "gulp-cache": "^1.1.3",
     "gulp-clean-css": "^4.3.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-cssnano": "^2.1.3",
-    "gulp-htmlmin": "^5.0.1",
-    "gulp-if": "^3.0.0",
+    "gulp-file-include": "^2.2.2",
+    "gulp-fonter": "^0.3.0",
+    "gulp-group-css-media-queries": "^1.2.2",
     "gulp-imagemin": "^7.1.0",
-    "gulp-notify": "^3.2.0",
-    "gulp-plumber": "^1.2.1",
-    "gulp-postcss": "^8.0.0",
     "gulp-rename": "^2.0.0",
-    "gulp-rigger": "^0.5.8",
     "gulp-sass": "^4.1.0",
-    "gulp-sourcemaps": "^2.6.5",
-    "gulp-uglify": "^3.0.2",
-    "gulp-uglifyjs": "^0.6.2",
-    "imagemin-pngquant": "^9.0.0",
-    "imagemin-webp": "^6.0.0",
-    "install": "^0.13.0",
-    "node-sass": "^4.14.1",
-    "npm": "^6.14.5",
-    "postcss-reporter": "^6.0.1",
-    "rigger": "^1.0.1",
-    "stylelint": "^13.6.0",
-    "yargs": "^15.3.1"
+    "gulp-ttf2woff": "^1.1.1",
+    "gulp-ttf2woff2": "^3.0.0",
+    "gulp-uglify-es": "^2.0.0",
+    "gulp-webp": "^4.0.1",
+    "gulp-webp-html": "^1.0.2",
+    "gulp-webpcss": "^1.1.1"
   },
   "dependencies": {}
 }
