--- a/package.json
+++ b/package.json
@@ -19,18 +19,20 @@
     "gulp-autoprefixer": "^7.0.1",
     "gulp-babel": "^8.0.0",
     "gulp-clean-css": "^4.3.0",
-    "gulp-file-include": "^2.2.2",
     "gulp-fonter": "^0.3.0",
     "gulp-group-css-media-queries": "^1.2.2",
     "gulp-imagemin": "^7.1.0",
+    "gulp-plumber": "^1.2.1",
     "gulp-rename": "^2.0.0",
+    "gulp-rigger": "^0.5.8",
     "gulp-sass": "^4.1.0",
+    "gulp-sourcemaps": "^2.6.5",
     "gulp-ttf2woff": "^1.1.1",
     "gulp-ttf2woff2": "^3.0.0",
     "gulp-uglify-es": "^2.0.0",
     "gulp-webp": "^4.0.1",
     "gulp-webp-html": "^1.0.2",
-    "gulp-webpcss": "^1.1.1"
-  },
-  "dependencies": {}
+    "gulp-webpcss": "^1.1.1",
+    "posthtml-include": "^1.4.3"
+  }
 }
