--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "gulp-cssnano": "^2.1.3",
     "gulp-fonter": "^0.3.0",
     "gulp-group-css-media-queries": "^1.2.2",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-if": "^3.0.0",
     "gulp-imagemin": "^7.1.0",
     "gulp-plumber": "^1.2.1",
     "gulp-rename": "^2.0.0",
@@ -33,6 +35,7 @@
     "gulp-webp": "^4.0.1",
     "gulp-webp-html": "^1.0.2",
     "gulp-webpcss": "^1.1.1",
-    "posthtml-include": "^1.4.3"
+    "posthtml-include": "^1.4.3",
+    "yargs": "^15.4.0"
   }
 }
