--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-autoprefixer": "^7.0.1",
     "gulp-babel": "^8.0.0",
     "gulp-cssnano": "^2.1.3",
+    "gulp-file-include": "^2.2.2",
     "gulp-fonter": "^0.3.0",
     "gulp-group-css-media-queries": "^1.2.2",
     "gulp-htmlmin": "^5.0.1",
@@ -36,5 +37,12 @@
     "gulp-webp-html": "^1.0.2",
     "gulp-webpcss": "^1.1.1",
     "posthtml-include": "^1.4.3"
+  },
+  "dependencies": {
+    "babel-loader": "^8.1.0",
+    "css-vars-ponyfill": "^2.3.2",
+    "python": "0.0.4",
+    "svgxuse": "^1.2.6",
+    "webpack-stream": "^5.2.1"
   }
 }
