--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/polyfill": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "browser-sync": "^2.26.7",
+    "copy-webpack-plugin": "^6.1.0",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
