--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/polyfill": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "browser-sync": "^2.26.7",
+    "copy-webpack-plugin": "^6.2.1",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
@@ -36,11 +37,13 @@
     "gulp-webp": "^4.0.1",
     "gulp-webp-html": "^1.0.2",
     "gulp-webpcss": "^1.1.1",
-    "posthtml-include": "^1.4.3"
+    "posthtml-include": "^1.4.3",
+    "style-loader": "^2.0.0"
   },
   "dependencies": {
     "babel-loader": "^8.1.0",
     "css-vars-ponyfill": "^2.3.2",
+    "core-js": "^3.6.5",
     "python": "0.0.4",
     "svgxuse": "^1.2.6",
     "webpack-stream": "^5.2.1"
