--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-env": "^7.10.4",
     "browser-sync": "^2.26.7",
     "copy-webpack-plugin": "^6.2.1",
+    "css-loader": "^5.0.0",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
